# IrishaIRC

./: .gitignore  AConnection.cpp  AConnection.hpp  CMakeLists.txt  CONFIGURATION.md  Channel.cpp  Channel.hpp  Classes.drawio  Irisha.config.cpp  Irisha.cpp  Irisha.hpp  Irisha.irc.cpp  Irisha.replies.cpp  Irisha.users.cpp  Irisha.utils.cpp  Makefile  README.md  Server.cpp  Server.hpp  User.cpp  User.hpp  irisha.conf  main.cpp  parser.cpp  parser.hpp  send_msg.docs.md  useful_commands.md  utils.cpp  utils.hpp
